--- a/config.sample.json
+++ b/config.sample.json
@@ -1,12 +1,26 @@
 {
   "ports": [8008, 3333, 1333, 6666],
+  "logger": {
+    "mode": "console",
+    "params": {
+      "color": true,
+      "truncate": {
+        "mode": "lsb",
+        "length": 8
+      }
+    }
+  },
   "rewriter": "./lib/rewrite/forward.js",
   "params": {
     "log": "all",
     "remote": {
-      "host": "192.99.37.89",
-      "port": 8008,
+      "host": "zec-us-west1.nanopool.org",
+      "port": 6666,
       "retry": 0
+    },
+    "stats": {
+      "enabled": true,
+      "captureShares": true
     }
   }
 }
